--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -4,14 +4,14 @@
 
 @font-face {
   font-family: "FinnType";
-  src: url("./fonts/FinnTypeStrippet-Light.woff2") format("woff2");
+  src: url("../fonts/FinnTypeStrippet-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "FinnType";
-  src: url("./fonts/FinnTypeStrippet-Medium.woff2") format("woff2");
+  src: url("../fonts/FinnTypeStrippet-Medium.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
